# omen

./: .gitignore  CLI_USAGE.md  IMPLEMENTATION_SUMMARY.md  MEMORY_IMPLEMENTATION.md  OMEN.md  README.md  TEMPLATE_COMPILER.md  TRANSCRIPT_COMPARISON.md  TRANSCRIPT_IMPROVEMENTS.md  compile_template.py  corr_verify_test.jsonl  corr_verify_test2.jsonl  debug_packet_structure.py  demo_memory_systems.py  pyproject.toml  pytest.ini  requirements.txt  run_template_h.py  test_transcript_fixes.py  validate_omen.py
demos/: cognitive_transcript_complex_demo.py  cognitive_transcript_demo.py  cognitive_transcript_demo_real.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  README.md
docs/v0.7/: golden_catalog.md  schema_index.md
goldens/v0.7/: DecisionPacket.act_readonly.json  DecisionPacket.act_write.json  DecisionPacket.subpar_blocks_action.INVALID.json  DecisionPacket.verify_first.json  Episode.degraded_tools_high_stakes.jsonl  Episode.verify_loop.jsonl  Episode.write_with_token.jsonl  EscalationPacket.high_stakes_uncertainty.json
templates/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_fsm_validator.py  test_header.py  test_invariant_validator.py  test_mcp.py  test_packets_belief_update.py  test_packets_decision.py  test_packets_escalation.py  test_packets_integrity_alert.py  test_packets_observation.py  test_packets_task_directive.py  test_packets_task_result.py  test_packets_tool_authorization.py  test_packets_verification_plan.py  test_schema_validator.py  test_setup.py  test_template_compiler.py  test_vocabulary.py
(+137 files in other folders)
